log
Thu 21 Mar 2024 01:38:50 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
dd9521e
Thu 21 Mar 2024 01:57:44 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:61:14: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   61 |   int dato = first(L);
      |              ^~~~~
exercises.c:64:14: error: comparison between pointer and integer [-Werror]
   64 |   while(dato != NULL)
      |              ^~
exercises.c:66:15: error: invalid type argument of unary ‘*’ (have ‘int’)
   66 |       suma += *dato;
      |               ^~~~~
exercises.c:67:12: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |       dato = next(L);
      |            ^
cc1: all warnings being treated as errors
Compilation failed
fb7324e
Thu 21 Mar 2024 01:57:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
1639730
Thu 21 Mar 2024 02:41:29 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
4fd220a
Thu 21 Mar 2024 02:41:43 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|2
total_score: 40/70
7a7b52f
Thu 21 Mar 2024 08:16:58 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
380053b
Thu 21 Mar 2024 08:18:54 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:114:3: error: implicit declaration of function ‘free_stack’; did you mean ‘create_stack’? [-Werror=implicit-function-declaration]
  114 |   free_stack(P3);
      |   ^~~~~~~~~~
      |   create_stack
cc1: all warnings being treated as errors
Compilation failed
590c9b7
